Projeto::Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    PROCEDURE
    REPEAT
    TYPE
    UNTIL

Grammar

Rule 0     S' -> init
Rule 1     init -> PROGRAM program_name
Rule 2     program_name -> ID SEMICOLON program_body
Rule 3     program_body -> const_decls func_decls var_decl begin_progr
Rule 4     program_body -> func_decls var_decl begin_progr
Rule 5     program_body -> const_decls var_decl begin_progr
Rule 6     program_body -> const_decls func_decls begin_progr
Rule 7     program_body -> const_decls begin_progr
Rule 8     program_body -> func_decls begin_progr
Rule 9     program_body -> var_decl begin_progr
Rule 10    program_body -> begin_progr
Rule 11    const_decls -> CONST const_decl_list
Rule 12    const_decl_list -> const_decl
Rule 13    const_decl_list -> const_decl_list const_decl
Rule 14    const_decl -> ID EQ expression SEMICOLON
Rule 15    func_decls -> func_decl
Rule 16    func_decls -> func_decls func_decl
Rule 17    func_decl -> FUNCTION ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func
Rule 18    begin_func -> var_decl compound_statement SEMICOLON
Rule 19    begin_func -> compound_statement SEMICOLON
Rule 20    var_decl -> VAR var_decl_lines
Rule 21    var_decl_lines -> var_decl_line
Rule 22    var_decl_lines -> var_decl_lines var_decl_line
Rule 23    var_decl_line -> id_list COLON type SEMICOLON
Rule 24    var_decl_line -> id_list COLON type
Rule 25    id_list -> ID
Rule 26    id_list -> id_list COMMA ID
Rule 27    type -> INTEGERTYPE
Rule 28    type -> FLOATTYPE
Rule 29    type -> BOOLEANTYPE
Rule 30    type -> STRINGTYPE
Rule 31    type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type
Rule 32    begin_progr -> compound_statement DOT
Rule 33    statement_list -> statement
Rule 34    statement_list -> statement_list statement
Rule 35    statement -> COMMENT
Rule 36    statement -> simple_statement SEMICOLON
Rule 37    statement -> compound_statement SEMICOLON
Rule 38    statement -> selection_statement
Rule 39    statement -> while_statement
Rule 40    statement -> for_statement
Rule 41    simple_statement -> ID ASSIGN expression
Rule 42    simple_statement -> WRITEFUNC LPAREN expression_list RPAREN
Rule 43    simple_statement -> WRITEFUNCLN LPAREN expression_list RPAREN
Rule 44    simple_statement -> READFUNC expression
Rule 45    simple_statement -> READFUNCLN expression
Rule 46    simple_statement -> BREAK
Rule 47    compound_statement -> BEGIN statement_list END
Rule 48    selection_statement -> IF expression THEN statement
Rule 49    selection_statement -> IF expression THEN inside_statement ELSE statement
Rule 50    inside_statement -> simple_statement
Rule 51    inside_statement -> compound_statement
Rule 52    inside_statement -> inside_selection_statement
Rule 53    inside_selection_statement -> IF expression THEN inside_statement
Rule 54    inside_selection_statement -> IF expression THEN inside_statement ELSE inside_statement
Rule 55    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 56    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 57    while_statement -> WHILE expression DO statement
Rule 58    expression -> expression PLUS expression
Rule 59    expression -> expression MINUS expression
Rule 60    expression -> expression TIMES expression
Rule 61    expression -> expression DIV expression
Rule 62    expression -> expression MOD expression
Rule 63    expression -> expression AND expression
Rule 64    expression -> expression GT expression
Rule 65    expression -> expression LT expression
Rule 66    expression -> expression GE expression
Rule 67    expression -> expression LE expression
Rule 68    expression -> expression EQ expression
Rule 69    expression -> expression NE expression
Rule 70    expression -> expression OR expression
Rule 71    expression -> STRING
Rule 72    expression -> NUMBER
Rule 73    expression -> FLOAT
Rule 74    expression -> FALSE
Rule 75    expression -> TRUE
Rule 76    expression -> CHAR
Rule 77    expression -> ID
Rule 78    expression -> ID LBRACKET expression RBRACKET
Rule 79    expression -> ID LPAREN expression_list RPAREN
Rule 80    expression -> ID LPAREN RPAREN
Rule 81    expression_list -> expression
Rule 82    expression_list -> expression_list COMMA expression
Rule 83    expression -> NOT expression
Rule 84    expression -> <empty>
Rule 85    expression -> ORDFUNC expression
Rule 86    expression -> PREDFUNC expression
Rule 87    expression -> SUCCFUNC expression
Rule 88    expression -> LENGTHFUNC expression
Rule 89    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 63
ARRAY                : 31
ASSIGN               : 41 55 56
BEGIN                : 47
BOOLEANTYPE          : 29
BREAK                : 46
CASE                 : 
CHAR                 : 76
COLON                : 17 23 24
COMMA                : 26 82
COMMENT              : 35
CONST                : 11
DIV                  : 61
DO                   : 55 56 57
DOT                  : 32
DOTDOT               : 31
DOWNTO               : 56
ELSE                 : 49 54
END                  : 47
EQ                   : 14 68
FALSE                : 74
FLOAT                : 73
FLOATTYPE            : 28
FOR                  : 55 56
FUNCTION             : 17
GE                   : 66
GT                   : 64
ID                   : 2 14 17 25 26 41 55 56 77 78 79 80
IF                   : 48 49 53 54
INTEGERTYPE          : 27
LBRACKET             : 31 78
LE                   : 67
LENGTHFUNC           : 88
LPAREN               : 17 42 43 79 80 89
LT                   : 65
MINUS                : 59
MOD                  : 62
NE                   : 69
NOT                  : 83
NUMBER               : 31 31 72
OF                   : 31
OR                   : 70
ORDFUNC              : 85
PLUS                 : 58
PREDFUNC             : 86
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 31 78
READFUNC             : 44
READFUNCLN           : 45
REPEAT               : 
RPAREN               : 17 42 43 79 80 89
SEMICOLON            : 2 14 17 18 19 23 36 37
STRING               : 71
STRINGTYPE           : 30
SUCCFUNC             : 87
THEN                 : 48 49 53 54
TIMES                : 60
TO                   : 55
TRUE                 : 75
TYPE                 : 
UNTIL                : 
VAR                  : 20
WHILE                : 57
WRITEFUNC            : 42
WRITEFUNCLN          : 43
error                : 

Nonterminals, with rules where they appear

begin_func           : 17
begin_progr          : 3 4 5 6 7 8 9 10
compound_statement   : 18 19 32 37 51
const_decl           : 12 13
const_decl_list      : 11 13
const_decls          : 3 5 6 7
expression           : 14 41 44 45 48 49 53 54 55 55 56 56 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 78 81 82 83 85 86 87 88 89
expression_list      : 42 43 79 82
for_statement        : 40
func_decl            : 15 16
func_decls           : 3 4 6 8 16
id_list              : 23 24 26
init                 : 0
inside_selection_statement : 52
inside_statement     : 49 53 54 54
program_body         : 2
program_name         : 1
selection_statement  : 38
simple_statement     : 36 50
statement            : 33 34 48 49 55 56 57
statement_list       : 34 47
type                 : 17 23 24 31
var_decl             : 3 4 5 9 18
var_decl_line        : 21 22
var_decl_lines       : 17 20 22
while_statement      : 39

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . PROGRAM program_name

    PROGRAM         shift and go to state 2

    init                           shift and go to state 1

state 1

    (0) S' -> init .



state 2

    (1) init -> PROGRAM . program_name
    (2) program_name -> . ID SEMICOLON program_body

    ID              shift and go to state 4

    program_name                   shift and go to state 3

state 3

    (1) init -> PROGRAM program_name .

    $end            reduce using rule 1 (init -> PROGRAM program_name .)


state 4

    (2) program_name -> ID . SEMICOLON program_body

    SEMICOLON       shift and go to state 5


state 5

    (2) program_name -> ID SEMICOLON . program_body
    (3) program_body -> . const_decls func_decls var_decl begin_progr
    (4) program_body -> . func_decls var_decl begin_progr
    (5) program_body -> . const_decls var_decl begin_progr
    (6) program_body -> . const_decls func_decls begin_progr
    (7) program_body -> . const_decls begin_progr
    (8) program_body -> . func_decls begin_progr
    (9) program_body -> . var_decl begin_progr
    (10) program_body -> . begin_progr
    (11) const_decls -> . CONST const_decl_list
    (15) func_decls -> . func_decl
    (16) func_decls -> . func_decls func_decl
    (20) var_decl -> . VAR var_decl_lines
    (32) begin_progr -> . compound_statement DOT
    (17) func_decl -> . FUNCTION ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func
    (47) compound_statement -> . BEGIN statement_list END

    CONST           shift and go to state 11
    VAR             shift and go to state 13
    FUNCTION        shift and go to state 15
    BEGIN           shift and go to state 16

    program_body                   shift and go to state 6
    const_decls                    shift and go to state 7
    func_decls                     shift and go to state 8
    var_decl                       shift and go to state 9
    begin_progr                    shift and go to state 10
    func_decl                      shift and go to state 12
    compound_statement             shift and go to state 14

state 6

    (2) program_name -> ID SEMICOLON program_body .

    $end            reduce using rule 2 (program_name -> ID SEMICOLON program_body .)


state 7

    (3) program_body -> const_decls . func_decls var_decl begin_progr
    (5) program_body -> const_decls . var_decl begin_progr
    (6) program_body -> const_decls . func_decls begin_progr
    (7) program_body -> const_decls . begin_progr
    (15) func_decls -> . func_decl
    (16) func_decls -> . func_decls func_decl
    (20) var_decl -> . VAR var_decl_lines
    (32) begin_progr -> . compound_statement DOT
    (17) func_decl -> . FUNCTION ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func
    (47) compound_statement -> . BEGIN statement_list END

    VAR             shift and go to state 13
    FUNCTION        shift and go to state 15
    BEGIN           shift and go to state 16

    func_decls                     shift and go to state 17
    var_decl                       shift and go to state 18
    begin_progr                    shift and go to state 19
    func_decl                      shift and go to state 12
    compound_statement             shift and go to state 14

state 8

    (4) program_body -> func_decls . var_decl begin_progr
    (8) program_body -> func_decls . begin_progr
    (16) func_decls -> func_decls . func_decl
    (20) var_decl -> . VAR var_decl_lines
    (32) begin_progr -> . compound_statement DOT
    (17) func_decl -> . FUNCTION ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func
    (47) compound_statement -> . BEGIN statement_list END

    VAR             shift and go to state 13
    FUNCTION        shift and go to state 15
    BEGIN           shift and go to state 16

    var_decl                       shift and go to state 20
    begin_progr                    shift and go to state 21
    func_decl                      shift and go to state 22
    compound_statement             shift and go to state 14

state 9

    (9) program_body -> var_decl . begin_progr
    (32) begin_progr -> . compound_statement DOT
    (47) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 16

    begin_progr                    shift and go to state 23
    compound_statement             shift and go to state 14

state 10

    (10) program_body -> begin_progr .

    $end            reduce using rule 10 (program_body -> begin_progr .)


state 11

    (11) const_decls -> CONST . const_decl_list
    (12) const_decl_list -> . const_decl
    (13) const_decl_list -> . const_decl_list const_decl
    (14) const_decl -> . ID EQ expression SEMICOLON

    ID              shift and go to state 26

    const_decl_list                shift and go to state 24
    const_decl                     shift and go to state 25

state 12

    (15) func_decls -> func_decl .

    VAR             reduce using rule 15 (func_decls -> func_decl .)
    FUNCTION        reduce using rule 15 (func_decls -> func_decl .)
    BEGIN           reduce using rule 15 (func_decls -> func_decl .)


state 13

    (20) var_decl -> VAR . var_decl_lines
    (21) var_decl_lines -> . var_decl_line
    (22) var_decl_lines -> . var_decl_lines var_decl_line
    (23) var_decl_line -> . id_list COLON type SEMICOLON
    (24) var_decl_line -> . id_list COLON type
    (25) id_list -> . ID
    (26) id_list -> . id_list COMMA ID

    ID              shift and go to state 30

    var_decl_lines                 shift and go to state 27
    var_decl_line                  shift and go to state 28
    id_list                        shift and go to state 29

state 14

    (32) begin_progr -> compound_statement . DOT

    DOT             shift and go to state 31


state 15

    (17) func_decl -> FUNCTION . ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func

    ID              shift and go to state 32


state 16

    (47) compound_statement -> BEGIN . statement_list END
    (33) statement_list -> . statement
    (34) statement_list -> . statement_list statement
    (35) statement -> . COMMENT
    (36) statement -> . simple_statement SEMICOLON
    (37) statement -> . compound_statement SEMICOLON
    (38) statement -> . selection_statement
    (39) statement -> . while_statement
    (40) statement -> . for_statement
    (41) simple_statement -> . ID ASSIGN expression
    (42) simple_statement -> . WRITEFUNC LPAREN expression_list RPAREN
    (43) simple_statement -> . WRITEFUNCLN LPAREN expression_list RPAREN
    (44) simple_statement -> . READFUNC expression
    (45) simple_statement -> . READFUNCLN expression
    (46) simple_statement -> . BREAK
    (47) compound_statement -> . BEGIN statement_list END
    (48) selection_statement -> . IF expression THEN statement
    (49) selection_statement -> . IF expression THEN inside_statement ELSE statement
    (57) while_statement -> . WHILE expression DO statement
    (55) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (56) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement

    COMMENT         shift and go to state 35
    ID              shift and go to state 41
    WRITEFUNC       shift and go to state 42
    WRITEFUNCLN     shift and go to state 43
    READFUNC        shift and go to state 44
    READFUNCLN      shift and go to state 45
    BREAK           shift and go to state 46
    BEGIN           shift and go to state 16
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    FOR             shift and go to state 49

    statement_list                 shift and go to state 33
    statement                      shift and go to state 34
    simple_statement               shift and go to state 36
    compound_statement             shift and go to state 37
    selection_statement            shift and go to state 38
    while_statement                shift and go to state 39
    for_statement                  shift and go to state 40

state 17

    (3) program_body -> const_decls func_decls . var_decl begin_progr
    (6) program_body -> const_decls func_decls . begin_progr
    (16) func_decls -> func_decls . func_decl
    (20) var_decl -> . VAR var_decl_lines
    (32) begin_progr -> . compound_statement DOT
    (17) func_decl -> . FUNCTION ID LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func
    (47) compound_statement -> . BEGIN statement_list END

    VAR             shift and go to state 13
    FUNCTION        shift and go to state 15
    BEGIN           shift and go to state 16

    var_decl                       shift and go to state 50
    begin_progr                    shift and go to state 51
    func_decl                      shift and go to state 22
    compound_statement             shift and go to state 14

state 18

    (5) program_body -> const_decls var_decl . begin_progr
    (32) begin_progr -> . compound_statement DOT
    (47) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 16

    begin_progr                    shift and go to state 52
    compound_statement             shift and go to state 14

state 19

    (7) program_body -> const_decls begin_progr .

    $end            reduce using rule 7 (program_body -> const_decls begin_progr .)


state 20

    (4) program_body -> func_decls var_decl . begin_progr
    (32) begin_progr -> . compound_statement DOT
    (47) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 16

    begin_progr                    shift and go to state 53
    compound_statement             shift and go to state 14

state 21

    (8) program_body -> func_decls begin_progr .

    $end            reduce using rule 8 (program_body -> func_decls begin_progr .)


state 22

    (16) func_decls -> func_decls func_decl .

    VAR             reduce using rule 16 (func_decls -> func_decls func_decl .)
    FUNCTION        reduce using rule 16 (func_decls -> func_decls func_decl .)
    BEGIN           reduce using rule 16 (func_decls -> func_decls func_decl .)


state 23

    (9) program_body -> var_decl begin_progr .

    $end            reduce using rule 9 (program_body -> var_decl begin_progr .)


state 24

    (11) const_decls -> CONST const_decl_list .
    (13) const_decl_list -> const_decl_list . const_decl
    (14) const_decl -> . ID EQ expression SEMICOLON

    VAR             reduce using rule 11 (const_decls -> CONST const_decl_list .)
    FUNCTION        reduce using rule 11 (const_decls -> CONST const_decl_list .)
    BEGIN           reduce using rule 11 (const_decls -> CONST const_decl_list .)
    ID              shift and go to state 26

    const_decl                     shift and go to state 54

state 25

    (12) const_decl_list -> const_decl .

    ID              reduce using rule 12 (const_decl_list -> const_decl .)
    VAR             reduce using rule 12 (const_decl_list -> const_decl .)
    FUNCTION        reduce using rule 12 (const_decl_list -> const_decl .)
    BEGIN           reduce using rule 12 (const_decl_list -> const_decl .)


state 26

    (14) const_decl -> ID . EQ expression SEMICOLON

    EQ              shift and go to state 55


state 27

    (20) var_decl -> VAR var_decl_lines .
    (22) var_decl_lines -> var_decl_lines . var_decl_line
    (23) var_decl_line -> . id_list COLON type SEMICOLON
    (24) var_decl_line -> . id_list COLON type
    (25) id_list -> . ID
    (26) id_list -> . id_list COMMA ID

    BEGIN           reduce using rule 20 (var_decl -> VAR var_decl_lines .)
    ID              shift and go to state 30

    var_decl_line                  shift and go to state 56
    id_list                        shift and go to state 29

state 28

    (21) var_decl_lines -> var_decl_line .

    ID              reduce using rule 21 (var_decl_lines -> var_decl_line .)
    BEGIN           reduce using rule 21 (var_decl_lines -> var_decl_line .)
    RPAREN          reduce using rule 21 (var_decl_lines -> var_decl_line .)


state 29

    (23) var_decl_line -> id_list . COLON type SEMICOLON
    (24) var_decl_line -> id_list . COLON type
    (26) id_list -> id_list . COMMA ID

    COLON           shift and go to state 57
    COMMA           shift and go to state 58


state 30

    (25) id_list -> ID .

    COLON           reduce using rule 25 (id_list -> ID .)
    COMMA           reduce using rule 25 (id_list -> ID .)


state 31

    (32) begin_progr -> compound_statement DOT .

    $end            reduce using rule 32 (begin_progr -> compound_statement DOT .)


state 32

    (17) func_decl -> FUNCTION ID . LPAREN var_decl_lines RPAREN COLON type SEMICOLON begin_func

    LPAREN          shift and go to state 59


state 33

    (47) compound_statement -> BEGIN statement_list . END
    (34) statement_list -> statement_list . statement
    (35) statement -> . COMMENT
    (36) statement -> . simple_statement SEMICOLON
    (37) statement -> . compound_statement SEMICOLON
    (38) statement -> . selection_statement
    (39) statement -> . while_statement
    (40) statement -> . for_statement
    (41) simple_statement -> . ID ASSIGN expression
    (42) simple_statement -> . WRITEFUNC LPAREN expression_list RPAREN
    (43) simple_statement -> . WRITEFUNCLN LPAREN expression_list RPAREN
    (44) simple_statement -> . READFUNC expression
    (45) simple_statement -> . READFUNCLN expression
    (46) simple_statement -> . BREAK
    (47) compound_statement -> . BEGIN statement_list END
    (48) selection_statement -> . IF expression THEN statement
    (49) selection_statement -> . IF expression THEN inside_statement ELSE statement
    (57) while_statement -> . WHILE expression DO statement
    (55) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (56) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement

    END             shift and go to state 60
    COMMENT         shift and go to state 35
    ID              shift and go to state 41
    WRITEFUNC       shift and go to state 42
    WRITEFUNCLN     shift and go to state 43
    READFUNC        shift and go to state 44
    READFUNCLN      shift and go to state 45
    BREAK           shift and go to state 46
    BEGIN           shift and go to state 16
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    FOR             shift and go to state 49

    statement                      shift and go to state 61
    simple_statement               shift and go to state 36
    compound_statement             shift and go to state 37
    selection_statement            shift and go to state 38
    while_statement                shift and go to state 39
    for_statement                  shift and go to state 40

state 34

    (33) statement_list -> statement .

    END             reduce using rule 33 (statement_list -> statement .)
    COMMENT         reduce using rule 33 (statement_list -> statement .)
    ID              reduce using rule 33 (statement_list -> statement .)
    WRITEFUNC       reduce using rule 33 (statement_list -> statement .)
    WRITEFUNCLN     reduce using rule 33 (statement_list -> statement .)
    READFUNC        reduce using rule 33 (statement_list -> statement .)
    READFUNCLN      reduce using rule 33 (statement_list -> statement .)
    BREAK           reduce using rule 33 (statement_list -> statement .)
    BEGIN           reduce using rule 33 (statement_list -> statement .)
    IF              reduce using rule 33 (statement_list -> statement .)
    WHILE           reduce using rule 33 (statement_list -> statement .)
    FOR             reduce using rule 33 (statement_list -> statement .)


state 35

    (35) statement -> COMMENT .

    END             reduce using rule 35 (statement -> COMMENT .)
    COMMENT         reduce using rule 35 (statement -> COMMENT .)
    ID              reduce using rule 35 (statement -> COMMENT .)
    WRITEFUNC       reduce using rule 35 (statement -> COMMENT .)
    WRITEFUNCLN     reduce using rule 35 (statement -> COMMENT .)
    READFUNC        reduce using rule 35 (statement -> COMMENT .)
    READFUNCLN      reduce using rule 35 (statement -> COMMENT .)
    BREAK           reduce using rule 35 (statement -> COMMENT .)
    BEGIN           reduce using rule 35 (statement -> COMMENT .)
    IF              reduce using rule 35 (statement -> COMMENT .)
    WHILE           reduce using rule 35 (statement -> COMMENT .)
    FOR             reduce using rule 35 (statement -> COMMENT .)


state 36

    (36) statement -> simple_statement . SEMICOLON

    SEMICOLON       shift and go to state 62


state 37

    (37) statement -> compound_statement . SEMICOLON

    SEMICOLON       shift and go to state 63


state 38

    (38) statement -> selection_statement .

    END             reduce using rule 38 (statement -> selection_statement .)
    COMMENT         reduce using rule 38 (statement -> selection_statement .)
    ID              reduce using rule 38 (statement -> selection_statement .)
    WRITEFUNC       reduce using rule 38 (statement -> selection_statement .)
    WRITEFUNCLN     reduce using rule 38 (statement -> selection_statement .)
    READFUNC        reduce using rule 38 (statement -> selection_statement .)
    READFUNCLN      reduce using rule 38 (statement -> selection_statement .)
    BREAK           reduce using rule 38 (statement -> selection_statement .)
    BEGIN           reduce using rule 38 (statement -> selection_statement .)
    IF              reduce using rule 38 (statement -> selection_statement .)
    WHILE           reduce using rule 38 (statement -> selection_statement .)
    FOR             reduce using rule 38 (statement -> selection_statement .)


state 39

    (39) statement -> while_statement .

    END             reduce using rule 39 (statement -> while_statement .)
    COMMENT         reduce using rule 39 (statement -> while_statement .)
    ID              reduce using rule 39 (statement -> while_statement .)
    WRITEFUNC       reduce using rule 39 (statement -> while_statement .)
    WRITEFUNCLN     reduce using rule 39 (statement -> while_statement .)
    READFUNC        reduce using rule 39 (statement -> while_statement .)
    READFUNCLN      reduce using rule 39 (statement -> while_statement .)
    BREAK           reduce using rule 39 (statement -> while_statement .)
    BEGIN           reduce using rule 39 (statement -> while_statement .)
    IF              reduce using rule 39 (statement -> while_statement .)
    WHILE           reduce using rule 39 (statement -> while_statement .)
    FOR             reduce using rule 39 (statement -> while_statement .)


state 40

    (40) statement -> for_statement .

    END             reduce using rule 40 (statement -> for_statement .)
    COMMENT         reduce using rule 40 (statement -> for_statement .)
    ID              reduce using rule 40 (statement -> for_statement .)
    WRITEFUNC       reduce using rule 40 (statement -> for_statement .)
    WRITEFUNCLN     reduce using rule 40 (statement -> for_statement .)
    READFUNC        reduce using rule 40 (statement -> for_statement .)
    READFUNCLN      reduce using rule 40 (statement -> for_statement .)
    BREAK           reduce using rule 40 (statement -> for_statement .)
    BEGIN           reduce using rule 40 (statement -> for_statement .)
    IF              reduce using rule 40 (statement -> for_statement .)
    WHILE           reduce using rule 40 (statement -> for_statement .)
    FOR             reduce using rule 40 (statement -> for_statement .)


state 41

    (41) simple_statement -> ID . ASSIGN expression

    ASSIGN          shift and go to state 64


state 42

    (42) simple_statement -> WRITEFUNC . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 65


state 43

    (43) simple_statement -> WRITEFUNCLN . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 66


state 44

    (44) simple_statement -> READFUNC . expression
    (58) expression -> . expression PLUS expression
    (59) expression -> . expression MINUS expression
    (60) expression -> . expression TIMES expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression MOD expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression LT expression
    (66) expression -> . expression GE expression
    (67) expression -> . expression LE expression
    (68) expression -> . expression EQ expression
    (69) expression -> . expression NE expression
    (70) expression -> . expression OR expression
    (71) expression -> . STRING
    (72) expression -> . NUMBER
    (73) expression -> . FLOAT
    (74) expression -> . FALSE
    (75) expression -> . TRUE
    (76) expression -> . CHAR
    (77) expression -> . ID
    (78) expression -> . ID LBRACKET expression RBRACKET
    (79) expression -> . ID LPAREN expression_list RPAREN
    (80) expression -> . ID LPAREN RPAREN
    (83) expression -> . NOT expression
    (84) expression -> .
    (85) expression -> . ORDFUNC expression
    (86) expression -> . PREDFUNC expression
    (87) expression -> . SUCCFUNC expression
    (88) expression -> . LENGTHFUNC expression
    (89) expression -> . LPAREN expression RPAREN

    STRING          shift and go to state 68
    NUMBER          shift and go to state 69
    FLOAT           shift and go to state 70
    FALSE           shift and go to state 71
    TRUE            shift and go to state 72
    CHAR            shift and go to state 73
    ID              shift and go to state 74
    NOT             shift and go to state 76
    PLUS            reduce using rule 84 (expression -> .)
    MINUS           reduce using rule 84 (expression -> .)
    TIMES           reduce using rule 84 (expression -> .)
    DIV             reduce using rule 84 (expression -> .)
    MOD             reduce using rule 84 (expression -> .)
    AND             reduce using rule 84 (expression -> .)
    GT              reduce using rule 84 (expression -> .)
    LT              reduce using rule 84 (expression -> .)
    GE              reduce using rule 84 (expression -> .)
    LE              reduce using rule 84 (expression -> .)
    EQ              reduce using rule 84 (expression -> .)
    NE              reduce using rule 84 (expression -> .)
    OR              reduce using rule 84 (expression -> .)
    SEMICOLON       reduce using rule 84 (expression -> .)
    ELSE            reduce using rule 84 (expression -> .)
    ORDFUNC         shift and go to state 77
    PREDFUNC        shift and go to state 78
    SUCCFUNC        shift and go to state 79
    LENGTHFUNC      shift and go to state 80
    LPAREN          shift and go to state 75

    expression                     shift and go to state 67

state 45

    (45) simple_statement -> READFUNCLN . expression
    (58) expression -> . expression PLUS expression
    (59) expression -> . expression MINUS expression
    (60) expression -> . expression TIMES expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression MOD expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression LT expression
    (66) expression -> . expression GE expression
    (67) expression -> . expression LE expression
    (68) expression -> . expression EQ expression
    (69) expression -> . expression NE expression
    (70) expression -> . expression OR expression
    (71) expression -> . STRING
    (72) expression -> . NUMBER
    (73) expression -> . FLOAT
    (74) expression -> . FALSE
    (75) expression -> . TRUE
    (76) expression -> . CHAR
    (77) expression -> . ID
    (78) expression -> . ID LBRACKET expression RBRACKET
    (79) expression -> . ID LPAREN expression_list RPAREN
    (80) expression -> . ID LPAREN RPAREN
    (83) expression -> . NOT expression
    (84) expression -> .
    (85) expression -> . ORDFUNC expression
    (86) expression -> . PREDFUNC expression
    (87) expression -> . SUCCFUNC expression
    (88) expression -> . LENGTHFUNC expression
    (89) expression -> . LPAREN expression RPAREN

    STRING          shift and go to state 68
    NUMBER          shift and go to state 69
    FLOAT           shift and go to state 70
    FALSE           shift and go to state 71
    TRUE            shift and go to state 72
    CHAR            shift and go to state 73
    ID              shift and go to state 74
    NOT             shift and go to state 76
    PLUS            reduce using rule 84 (expression -> .)
    MINUS           reduce using rule 84 (expression -> .)
    TIMES           reduce using rule 84 (expression -> .)
    DIV             reduce using rule 84 (expression -> .)
    MOD             reduce using rule 84 (expression -> .)
    AND             reduce using rule 84 (expression -> .)
    GT              reduce using rule 84 (expression -> .)
    LT              reduce using rule 84 (expression -> .)
    GE              reduce using rule 84 (expression -> .)
    LE              reduce using rule 84 (expression -> .)
    EQ              reduce using rule 84 (expression -> .)
    NE              reduce using rule 84 (expression -> .)
    OR              reduce using rule 84 (expression -> .)
    SEMICOLON       reduce using rule 84 (expression -> .)
    ELSE            reduce using rule 84 (expression -> .)
    ORDFUNC         shift and go to state 77
    PREDFUNC        shift and go to state 78
    SUCCFUNC        shift and go to state 79
    LENGTHFUNC      shift and go to state 80
    LPAREN          shift and go to state 75

    expression                     shift and go to state 81

state 46

    (46) simple_statement -> BREAK .

    SEMICOLON       reduce using rule 46 (simple_statement -> BREAK .)
    ELSE            reduce using rule 46 (simple_statement -> BREAK .)


state 47

    (48) selection_statement -> IF . expression THEN statement
    (49) selection_statement -> IF . expression THEN inside_statement ELSE statement
    (58) expression -> . expression PLUS expression
    (59) expression -> . expression MINUS expression
    (60) expression -> . expression TIMES expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression MOD expression
    (63) expression -> . expression AND expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression LT expression
    (66) expression -> . expression GE expression
    (67) expression -> . expression LE expression
    (68) expression -> . expression EQ expression
    (69) expression -> . expression NE expression
    (70) expression -> . expression OR expression
    (71) expression -> . STRING
    (72) expression -> . NUMBER
    (73) expression -> . FLOAT
    (74) expression -> . FALSE
    (75) expression -> . TRUE
    (76) expression -> . CHAR
    (77) expression -> . ID
    (78) expression -> . ID LBRACKET expression RBRACKET
    (79) expression -> . ID LPAREN expression_list RPAREN
    (80) expression -> . ID LPAREN RPAREN
    (83) expression -> . NOT expression
    (84) expression -> .
    (85) expression -> . ORDFUNC expression
    (86) expression -> . PREDFUNC expression
    (87) expression -> . SUCCFUNC expression
    (88) expression -> . LENGTHFUNC expression
    (89) expression -> . LPAREN expression RPAREN

    STRING          shift and go to state 68
    NUMBER          shift and go to state 69
    FLOAT           shift and go to state 70
    FALSE           shift and go to state 71
    TRUE            shift and go to state 72
    CHAR            shift and go to state 73
    ID              shift and go to state 74
    NOT             shift and go to state 76
    THEN            reduce using rule 84 (expression -> .)
    PLUS            reduce using rule 84 (expression -> .)
    MINUS           reduce using rule 84 (expression -> .)
    TIMES           reduce using rule 84 (expression -> .)
    DIV             reduce using rule 84 (expression -> .)
    MOD             reduce using rule 84 (expression -> .)
    AND             reduce using rule 84 (expression -> .)
    GT              reduce using rule 84 (expression -> .)
    LT              reduce using rule 84 (expression -> .)
    GE              reduce using rule 84 (expression -> .)
    LE              reduce using rule 84 (expression -> .)
    EQ              reduce using rule 84 (expression -> .)
    NE              reduce using rule 84 (expression -> .)
    OR              reduce using rule 84 (expression -> .)
    ORDFUNC         shift and go to state 77
    PREDFUNC        shift and go to state 78
    SUCCFUNC        shift and go to state 79
    LENGTHFUNC      shift and go to state 80
    LPAREN          shift and go to state 75

    expression                     shift and go to state 82

state 48
